27: Fix api authenticator